<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_activity_login"
    tools:context=".ui.auth.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_login"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--App logo-->
            <ImageView
                android:id="@+id/image_view_app_logo_login"
                android:layout_width="@dimen/layout_width_image_view_app_logo"
                android:layout_height="@dimen/layout_height_image_view_app_logo"
                android:contentDescription="@string/desc_app_logo"
                android:elevation="@dimen/cardview_default_elevation"
                android:src="@drawable/app_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Login title-->
            <TextView
                android:id="@+id/text_view_title_login"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:text="@string/text_login"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_appbar_title"
                app:layout_constraintBottom_toBottomOf="@+id/image_view_app_logo_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/image_view_app_logo_login"
                app:layout_constraintTop_toTopOf="@+id/image_view_app_logo_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!--E-mail-->
    <EditText
        android:id="@+id/edit_text_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_email_24"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/default_minHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout_login" />

    <!--Password-->
    <EditText
        android:id="@+id/edit_text_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_password_24"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="@dimen/default_minHeight"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_login_email"
        app:layout_constraintStart_toStartOf="@+id/edit_text_login_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_login_email" />

    <!--Forgotten Password-->
    <TextView
        android:id="@+id/text_view_forgot_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_password_forgotten"
        android:textAlignment="textEnd"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_login_email"
        app:layout_constraintStart_toStartOf="@+id/edit_text_login_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_login_password" />

    <!--Login Button-->
    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_login"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_login_email"
        app:layout_constraintStart_toStartOf="@+id/edit_text_login_email"
        app:layout_constraintTop_toBottomOf="@+id/text_view_forgot_password" />

    <!--New User-->
    <TextView
        android:id="@+id/text_view_new_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_new_user"
        android:textAlignment="textEnd"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_login_email"
        app:layout_constraintStart_toStartOf="@+id/edit_text_login_email"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <!--Register Button (redirection)-->
    <Button
        android:id="@+id/button_register_redirect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_register"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_login_email"
        app:layout_constraintStart_toStartOf="@+id/edit_text_login_email"
        app:layout_constraintTop_toBottomOf="@+id/text_view_new_user" />

    <!--Progress-->
    <ProgressBar
        android:id="@+id/progress_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_register_redirect"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>