<resources>
    <string name="app_name">Dating App</string>

    <!-- Registration -->
    <string name="desc_add_image_button">Add Image Button</string>
    <string name="hint_username">username</string>
    <string name="hint_email">e-mail address</string>
    <string name="hint_password">password</string>
    <string name="hint_confirm_password">confirm password</string>
    <string name="hint_enter_title_here">enter title here</string>
    <string name="hint_enter_details_here">enter details here</string>
    <string name="hint_new_username">choose new username</string>
    <string name="hint_new_email">choose new e-mail address</string>
    <string name="hint_new_password">choose new password</string>
    <string name="button_register">Register</string>
    <string name="toast_empty_username">Username cannot be empty.</string>
    <string name="toast_empty_email">E-mail cannot be empty.</string>
    <string name="toast_empty_password">Password cannot be empty.</string>
    <string name="toast_empty_password_confirm">Please, confirm your password.</string>
    <string name="toast_failed_password_confirm">Password confirmation failed.</string>
    <string name="toast_registration_username_exists">This username already exists.</string>
    <string name="toast_registration_image_upload_failed">Image upload failed.</string>
    <string name="toast_registration_failed">User registration failed.</string>
    <string name="toast_registration_success">User registration completed.</string>

    <!-- Authentication -->
    <string name="login_logo_placeholder">placeholder</string>
    <string name="button_login">Sign In</string>
    <string name="toast_login_email_type_error">E-mail is not of correct type.</string>
    <string name="toast_login_successful">Login successful.</string>
    <string name="toast_login_failed">User login failed. Please, check your credentials and try again.</string>
    <string name="main_menu_title_logout">Logout</string>
</resources>