<resources>
    <string name="app_name">Photos</string>
    <string name="text_home">Home</string>
    <string name="text_search">Search</string>
    <string name="text_add">Add</string>
    <string name="desc_app_logo">App Logo</string>
    <string name="hint_search">Search…</string>
    <string name="title_menu_item_profile">Profile</string>

    <!--user profile-->
    <string name="label_username">Username:</string>
    <string name="label_posts">Posts:</string>
    <string name="label_stars">Stars:</string>
    <string name="label_followers">Followers:</string>
    <string name="label_follows">Follows:</string>
    <string name="text_zero">0</string>
    <string name="description_user_image">User Account Image</string>
    <string name="hint_new_username">choose new username</string>
    <string name="description_change_username">Change username</string>
    <string name="hint_new_email">choose new e-mail address</string>
    <string name="description_change_email">Change e-mail</string>
    <string name="hint_new_password">choose new password</string>
    <string name="hint_confirm_password">confirm password</string>
    <string name="button_update">Update</string>
    <string name="text_login">Login</string>
    <string name="hint_email">enter your e-mail</string>
    <string name="hint_password">************</string>
    <string name="text_password_forgotten">I forgot my password</string>

    <!--user authentication-->
    <string name="toast_empty_email">Please, enter your e-mail</string>
    <string name="toast_empty_password">Please, enter your password</string>
    <string name="toast_login_successful">Login successful</string>
    <string name="text_new_user">I am a new user</string>
    <string name="text_register">Register</string>
    <string name="hint_username">choose username</string>
    <string name="toast_exists_username">Username already exists</string>
    <string name="toast_exists_email">E-mail already exists</string>
    <string name="toast_error_passwords_match">Passwords do not match</string>
    <string name="toast_error_password_special_chars">Password should contain special characters</string>
    <string name="toast_error_password_digits">Password should contain numbers</string>
    <string name="toast_error_password_length">Password should have minimum length</string>
</resources>